--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HungryBear",
+  "name": "Tamagotchi",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -18,6 +18,7 @@
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
     "html-webpack-plugin": "^3.0.6",
+    "install": "^0.12.2",
     "jasmine": "^3.1.0",
     "jasmine-core": "^2.99.0",
     "karma": "^2.0.0",
@@ -28,6 +29,7 @@
     "karma-jquery": "^0.2.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.13",
+    "npm": "^6.5.0",
     "nyc": "^13.1.0",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
