--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.0.6",
+    "image-webpack-loader": "^4.6.0",
     "install": "^0.12.2",
     "jasmine": "^3.1.0",
     "jasmine-core": "^2.99.0",
@@ -31,8 +33,9 @@
     "karma-webpack": "^2.0.13",
     "npm": "^6.5.0",
     "nyc": "^13.1.0",
-    "style-loader": "^0.20.2",
+    "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.2",
+    "url-loader": "^1.1.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.0"
